# garuda-pari

./: .gitignore  .gitmodules  Cargo.toml  garuda_bench.sh  rustc-ice-2025-04-08T15_02_00-87595.txt  rustc-ice-2025-04-08T20_11_23-73519.txt  rustc-ice-2025-04-14T13_58_49-40885.txt  rustc-ice-2025-05-24T20_42_48-92433.txt
bench-utils/: Cargo.toml
benches/: bench.rs
garuda/: Cargo.toml
garuda-bench/: Cargo.toml  benchmarks.csv  benchmarks1.csv  garuda.csv  garuda_bench.txt  plot.gnuplot  readme.md  rescue-benches.rs  rescue-garuda-gr1cs.rs  rescue-garuda-r1cs.rs  rescue-garuda.rs  rescue-hyperplonk.rs  rescue-spartan-ccs.rs  rescue-spartan-r1cs.rs
garuda-bench/benches/: aadhaar-garuda.rs  aadhaar-groth16.rs  aadhaar-spartan.rs  aptos-garuda.rs  aptos-groth16.rs  aptos-spartan-scoia.rs  aptos-spartan.rs  aptos-spartan2.rs  random-spartan-addition.rs  random-spartan-ccs-addition.rs  random-spartan-ccs.rs  random-spartan.rs  random_garuda.rs  random_garuda_addition.rs  random_garuda_gr1cs.rs  random_garuda_gr1cs_addition.rs  random_groth16.rs  random_groth16_addition.rs  rescue-garuda-gr1cs.rs  rescue-garuda-r1cs.rs  rescue-garuda.rs  rescue-gr1cs-synthesis.rs  rescue-groth16.rs  rescue-hyperplonk.rs  rescue-spartan-ccs.rs  rescue-spartan-nizk-ccs.rs  rescue-spartan-nizk-r1cs.rs  rescue-spartan-nizk.rs  rescue-spartan-r1cs copy.rs  rescue-spartan-r1cs.rs  rescue-spartan-snark.rs
garuda-bench/results/: plot.gnuplot  spartan-trace.txt
garuda-bench/src/: bellpepper_adapter.rs  lib.rs
garuda/src/: data_structures.rs  generator.rs  lib.rs  prover.rs  utils.rs  verifier.rs  zk.rs
garuda/src/arithmetic/: mod.rs  multilinear_polynomial.rs  univariate_polynomial.rs  util.rs  virtual_polynomial.rs
garuda/src/epc/: data_structures.rs  mod.rs  multilinear.rs
garuda/src/piop/: errors.rs  mod.rs  prelude.rs  structs.rs  utils.rs
garuda/src/piop/sum_check/: mod.rs  prover.rs  verifier.rs
garuda/src/piop/zero_check/: mod.rs
garuda/src/tests/: circuit1.rs  circuit2.rs
garuda/src/transcript/: mod.rs
pari/: Cargo.toml
pari-bench/: Cargo.toml  groth16.csv  pari.csv  pari.sol  pari.t.sol  parii.csv  plot.gnuplot  rescue-benches.rs  rescue-groth16.rs  rescue-groth166.rs  rescue-pari.rs  rescue-polymath.rs
pari-bench/benches/: rescue-groth16.rs  rescue-pari-synthesis.rs  rescue-pari.rs  rescue-polymath.rs
pari-bench/smart-contracts/: pari-1.sol  pari-1.t.sol  pari-128.sol  pari-128.t.sol  pari-16.sol  pari-16.t.sol  pari-2.sol  pari-32.sol  pari-32.t.sol  pari-4.sol  pari-64.sol  pari-64.t.sol  pari-8.sol
pari-bench/smart-contracts_v1/: pari-1.t.sol  pari-16.sol  pari-2.t.sol  pari-32.sol  pari-4.sol  pari-4.t.sol  pari-64.sol  pari-8.sol  pari-8.t.sol
pari-bench/src/: lib.rs
pari-sol/: .gitignore
pari-sol/src/: SP1VerifierGroth16.sol  pari copy 2.sol  pari copy.sol  pari.sol  polymath.sol
pari-sol/test/: Groth16GasTest.t.sol  PariGasTest.t.sol  PolymathGasTest.t.sol
pari-verifier-contracts/pari-sol/src/: Groth16Verifier.sol  pari.sol
pari-verifier-contracts/pari-sol/test/: SP1VerifierGroth16.t.sol
pari/src/: data_structures.rs  generator.rs  lib.rs  prover.rs  solidity.rs  test.rs  utils.rs  verifier.rs
pari/src/transcript/: mod.rs
polymath/: Cargo.toml
polymath/src/: data_structures.rs  generator.rs  lib.rs  prover.rs  shared.rs  test.rs  utils.rs  verifier.rs
shared-utils/: Cargo.toml
shared-utils/src/: bench.rs  lib.rs
shared-utils/src/transcript/: mod.rs
src/: data_structures.rs  generator.rs  lib.rs  prover.rs  timer.rs  utils.rs  verifier.rs
src/arithmetic/: virtual_polynomial.rs
src/epc/: mod.rs  multilinear.rs
src/piop/: errors.rs  prelude.rs
src/piop/sum_check/: mod.rs  verifier.rs
src/piop/zero_check/: mod.rs
src/tests/: circuit2.rs  mod.rs
