[workspace]
members = [ "shared-utils","garuda", "garuda-bench", "pari", "pari-bench", "polymath"]

resolver = "2"  # Recommended for workspaces to avoid dependency resolution issues



[workspace.dependencies]
ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-r1cs-std = {git = "https://github.com/alireza-shirzad/r1cs-std.git", default-features = true}
ark-groth16 = { git = "https://github.com/alireza-shirzad/groth16.git", default-features = false }
ark-relations = {  git = "https://github.com/alireza-shirzad/snark.git", default-features = true }
merlin = { version = "3.0.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
rayon = { version = "1.5.2" }
lazy_static = "1.4"
csv = "1.2"
num-bigint = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-crypto-primitives = { git = "https://github.com/alireza-shirzad/crypto-primitives.git",default-features =false, features = [
    "gr1cs",
    "snark",
    "crh",
] }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }
ark-bls12-377 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }

ark-bn254 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }



[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
