[workspace]
members = [ "shared-utils","garuda", "garuda-bench", "pari", "pari-bench", "polymath"]
resolver = "2"  # Recommended for workspaces to avoid dependency resolution issues
package.edition = "2021"


[workspace.dependencies]
ark-std = { version = "^0.5.0", default-features = false }
ark-serialize = { version = "^0.5.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-r1cs-std = {  git = "https://github.com/arkworks-rs/r1cs-std.git" , default-features = true}
ark-relations = {  git = "https://github.com/arkworks-rs/snark.git", default-features = true }
ark-groth16 = { git = "https://github.com/alireza-shirzad/groth16.git", default-features = false }
ark-crypto-primitives = { git = "https://github.com/alireza-shirzad/crypto-primitives.git",default-features = false, features = [
    "gr1cs",
    "snark",
    "crh",
] }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["curve"] }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["curve"] }
ark-poly-commit = { git = "https://github.com/alireza-shirzad/poly-commit"}
merlin = { version = "3.0.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
rayon = { version = "1.5.2" }
lazy_static = "1.4"
csv = "1.2"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = { version = "0.15", default-features = false , features = [ "default-hasher"] }
indexmap = { version = "2.9.0", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
# ark-relations = { path = "../arkworks/snark/relations" }
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }

# [patch."https://github.com/arkworks-rs/snark"]
# ark-relations = { path = "../arkworks/snark/relations" }

# [patch."https://github.com/arkworks-rs/r1cs-std"]
# ark-r1cs-std = { path = "../arkworks/r1cs-std" }
