[package]
name = "garuda-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
garuda = { path = "../garuda" }
shared-utils = { path = "../shared-utils" }
# Arkworks dependencies
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-r1cs-std = { workspace = true, features = ["std"] }
ark-relations = { workspace = true }
ark-groth16 = { workspace = true, default-features = false, features = [ "parallel" ] }
ark-bls12-381 = { workspace = true }
ark-spartan = { git = "https://github.com/alireza-shirzad/spartan.git", default-features = false }
ark-pallas = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-381-v4 = { package = "ark-bls12-381", version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-ff-v4 = { package = "ark-ff", version = "0.4.0" }
ark-ec-v4 = { package = "ark-ec", version = "0.4.0" }
ark-crypto-primitives-v4 = { package = "ark-crypto-primitives", version = "0.4.0", features = ["snark", "crh" ] }
ark-serialize-v4 = { package = "ark-serialize", version = "0.4.0" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", default-features = false, features = ["curve"] }
ark-circom = { git = "https://github.com/alireza-shirzad/circom-compat.git" }

# Other dependencies
merlin = { workspace = true }
displaydoc = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true, optional = true }
num-bigint = { workspace = true }
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", default-features = false }
hp-hyperplonk = { package = "hyperplonk", git = "https://github.com/alireza-shirzad/hyperplonk" }
hp-subroutines = { package = "subroutines", git = "https://github.com/alireza-shirzad/hyperplonk" }
rand = "0.8.5"
hashbrown = { workspace = true }
bellpepper-core = { version = "0.2.1", default-features = false }
bellpepper = { version = "0.4.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
bls12_381 = { version = "0.8.0" }

tokio = { version = "1.0", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[[bench]]
name = "aadhaar-garuda"
path = "benches/aadhaar-garuda.rs"
harness = false

[[bench]]
name = "aadhaar-groth16"
path = "benches/aadhaar-groth16.rs"
harness = false

[[bench]]
name = "rescue-garuda"
path = "benches/rescue-garuda.rs"
harness = false


[[bench]]
name = "aptos-garuda"
path = "benches/aptos-garuda.rs"
harness = false

[[bench]]
name = "aptos-groth16"
path = "benches/aptos-groth16.rs"
harness = false

[[bench]]
name = "rescue-spartan-r1cs"
path = "benches/rescue-spartan-r1cs.rs"
harness = false

[[bench]]
name = "rescue-spartan-ccs"
path = "benches/rescue-spartan-ccs.rs"
harness = false

[[bench]]
name = "rescue-hyperplonk"
path = "benches/rescue-hyperplonk.rs"
harness = false


[features]
std = [
    "garuda/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-std/std",
    "ark-serialize/std",
]
print-trace = ["ark-std/print-trace", "ark-spartan/profile"]
parallel = [
    "std",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "garuda/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "hp-hyperplonk/parallel",
    "hp-subroutines/parallel",
    "ark-spartan/multicore",
    "rayon",
]

r1cs = ["ark-crypto-primitives/r1cs"]
gr1cs = ["ark-crypto-primitives/gr1cs"]
