[package]
name = "garuda-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
garuda = { path = "../garuda" }
shared-utils = { path = "../shared-utils" }
# Arkworks dependencies
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-groth16 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-spartan = { workspace = true }
ark-pallas = { workspace = true }
ark-bn254 = { workspace = true }
ark-circom = { workspace = true }
# Other dependencies
merlin = { workspace = true }
displaydoc = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true, optional = true }
sha3 = "0.10"
num-bigint = { workspace = true }
hp-hyperplonk = { workspace = true }
hp-subroutines = { workspace = true }
rand = { workspace = true }
bellpepper-core = { workspace = true }
bellpepper = { workspace = true }
ff = { workspace = true }
bls12_381 = { workspace = true }
ark-curve25519 = { workspace = true }
num-traits = "0.2"
bellpepper-core-04 = { package = "bellpepper-core", version = "0.4", default-features = false }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
circom-scotia = { git = "https://github.com/lurk-lab/circom-scotia" }
spartan2 = { version = "0.7.0", default-features = false }
halo2curves = { version = "0.9", default-features = false, features = [
    "std",
    "derive_serde",
] }
[[bench]]
name = "aadhaar-garuda"
path = "benches/aadhaar-garuda.rs"
harness = false

[[bench]]
name = "aadhaar-spartan"
path = "benches/aadhaar-spartan.rs"
harness = false

[[bench]]
name = "aadhaar-groth16"
path = "benches/aadhaar-groth16.rs"
harness = false

[[bench]]
name = "rescue-garuda"
path = "benches/rescue-garuda.rs"
harness = false


[[bench]]
name = "random-garuda"
path = "benches/random_garuda.rs"
harness = false

[[bench]]
name = "random-garuda-addition"
path = "benches/random_garuda_addition.rs"
harness = false

[[bench]]
name = "random-garuda-gr1cs"
path = "benches/random_garuda_gr1cs.rs"
harness = false

[[bench]]
name = "random-garuda-gr1cs-addition"
path = "benches/random_garuda_gr1cs_addition.rs"
harness = false

[[bench]]
name = "random-spartan"
path = "benches/random-spartan.rs"
harness = false

[[bench]]
name = "random-spartan-ccs"
path = "benches/random-spartan-ccs.rs"
harness = false

[[bench]]
name = "random-spartan-ccs-addition"
path = "benches/random-spartan-ccs-addition.rs"
harness = false

[[bench]]
name = "random-spartan-addition"
path = "benches/random-spartan-addition.rs"
harness = false


[[bench]]
name = "aptos-garuda"
path = "benches/aptos-garuda.rs"
harness = false

[[bench]]
name = "aptos-groth16"
path = "benches/aptos-groth16.rs"
harness = false

[[bench]]
name = "aptos-spartan"
path = "benches/aptos-spartan.rs"
harness = false

[[bench]]
name = "aptos-spartan-scoia"
path = "benches/aptos-spartan-scoia.rs"
harness = false

[[bench]]
name = "rescue-spartan-r1cs"
path = "benches/rescue-spartan-r1cs.rs"
harness = false

[[bench]]
name = "rescue-spartan-ccs"
path = "benches/rescue-spartan-ccs.rs"
harness = false

[[bench]]
name = "rescue-spartan-nizk-ccs"
path = "benches/rescue-spartan-nizk-ccs.rs"
harness = false

[[bench]]
name = "rescue-spartan-nizk-r1cs"
path = "benches/rescue-spartan-nizk-r1cs.rs"
harness = false

[[bench]]
name = "rescue-hyperplonk"
path = "benches/rescue-hyperplonk.rs"
harness = false


[features]
std = [
    "garuda/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-std/std",
    "ark-serialize/std",
]
print-trace = ["ark-std/print-trace", "ark-spartan/profile"]
parallel = [
    "std",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "garuda/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "hp-hyperplonk/parallel",
    "hp-subroutines/parallel",
    "ark-spartan/multicore",
    "rayon",
]

r1cs = ["ark-crypto-primitives/constraints"]
gr1cs = ["ark-crypto-primitives/constraints"]
