[package]
name = "garuda"
version = "0.1.0"
description = "An implementation of the Garuda SNARK"
keywords = [
    "zero-knowledge",
    "cryptography",
    "zkSNARK",
    "SNARK",
    "constraint-systems",
]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"


################################# Dependencies ################################

[dependencies]
shared-utils = { path = "../shared-utils" }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true}
merlin = { workspace = true }
displaydoc = { workspace = true }
tracing = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
ark-crypto-primitives = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }

[features]
default = ["std", "parallel"]
std = [
    "ark-ff/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-std/std",
    "ark-serialize/std",
]
print-trace = ["ark-std/print-trace"]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-relations/parallel",
    "rayon",
]
