[package]
name = "pari"
version = "0.1.0"
description = "An implementation of the Garuda SNARK"
keywords = [
    "zero-knowledge",
    "cryptography",
    "zkSNARK",
    "SNARK",
    "constraint-systems",
]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"


################################# Dependencies ################################

[dependencies]
shared-utils = { path = "../shared-utils" }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-relations = { workspace = true }
merlin = { workspace = true }
displaydoc = { workspace = true }
tracing = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
ark-serialize = { workspace = true }
tiny-keccak = { version = "2.0.2", optional = true }
num-bigint = { version = "0.4.0" }
regex = "1.11.1"
[dev-dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }


[features]
default = ["std", "parallel"]
std = ["ark-ff/std", "ark-poly/std", "ark-relations/std", "ark-std/std"]
print-trace = ["ark-std/print-trace"]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "rayon",
]
sol = ["ark-std/std", "tiny-keccak/keccak"]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
