[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
merlin = { workspace = true }
displaydoc = { workspace = true }
ark-relations = { workspace = true }